fix: navbar background color and spacing

--- a/src/routes/base-css/nav.css
+++ b/src/routes/base-css/nav.css
@@ -3,11 +3,14 @@ body {
 }
 
 header {
-    background-color: #0b1616;
+    /* background-color: #0b1616; */
+    /* background-color: rgba(11, 22, 22, 0.5); */
+    backdrop-filter: blur(5px);
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1.2rem calc(5vw - 2rem);
+    padding: 10px 20px;
+    padding-left: 50px;
     position: sticky;
     top: 0px;
     z-index: 10;
